fix(providers/vimeo): not centered when aspect ratio is changed
fixes #77

--- a/packages/core/src/components/providers/vimeo/vimeo.scss
+++ b/packages/core/src/components/providers/vimeo/vimeo.scss
@@ -2,7 +2,5 @@ vime-vimeo > vime-embed.hideControls {
   display: block;
   width: 100%;
   position: relative;
-  padding-bottom: 200%;
-  transform: translateY(-35.95%);
   z-index: var(--vm-media-z-index);
 }
